--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "proyecto",
+  "name": "minitpi",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
